<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/base_margin"
        android:src="@drawable/my_avatar"
        android:scaleType="centerCrop"
        android:contentDescription="@string/my_avatar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="@dimen/base_margin"
            android:focusableInTouchMode="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/base_margin"
                android:layout_marginBottom="@dimen/base_margin"
                android:drawableStart="@drawable/ic_logo_mo"
                android:drawablePadding="8dp"
                android:text="@string/lcd_med_one_product_manager"
                android:textSize="@dimen/base_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/base_margin"
                android:drawableStart="@drawable/ic_logo_mo"
                android:drawablePadding="8dp"
                android:text="@string/android_developer"
                android:textSize="@dimen/base_text_size" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_marginBottom="@dimen/base_margin"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/base_margin"
                android:text="@string/about_me"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_marginBottom="@dimen/base_margin"/>

            <EditText
                android:id="@+id/et_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/enter_your_message"
                android:layout_marginBottom="@dimen/base_margin"
                android:textSize="@dimen/base_text_size"/>

            <Button
                android:id="@+id/btn_send_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="@dimen/base_margin"
                android:background="@color/transparent"
                android:text="@string/send_message" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/base_margin"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/ibtn_linkedin"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/transparent"
                    android:padding="8dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/linkedin"
                    android:contentDescription="@string/linkedin"/>

                <ImageButton
                    android:id="@+id/ibtn_instagram"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/transparent"
                    android:padding="8dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/instagram"
                    android:contentDescription="@string/instagram"/>

                <ImageButton
                    android:id="@+id/ibtn_vkontakte"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/transparent"
                    android:padding="8dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/vk"
                    android:contentDescription="@string/vkontakte"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>